examples/illtyped/bool.gr
data Bool where
  True : Int;
  False : Int
